--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,89 @@
-<h1>Login</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-    <a href="{% url 'signup' %}">Dont have Account Create</a>
-</form>
+{% block title %} Login Page {% endblock title %}
+{% load static %}
+{% block css %}
+    <link rel="stylesheet" href="{% static "css/home.css" %}">
+{% endblock css %}
+{% block content %}
+<div class="form-content my-3 p-3">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                    <div class="card-header justify-content-center">
+                        <h3 class="font-weight-light my-1 text-center">Sign In</h3>
+                    </div>
+
+                    {% if form.errors %}
+                    <div class="alert alert-danger alert-dismissible" role="alert">
+                        <div id="form_errors">
+                            {% for key, value in form.errors.items %}
+                            <strong>{{ value }}</strong>
+                            {% endfor %}
+                        </div>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endif %}
+
+                    <div class="card-body">
+                        <form method="POST">
+                            {% csrf_token %}
+                            <div class="form-row">
+                                <div class="col-md-10 offset-md-1">
+                                    <div class="form-group">
+                                        <label class="small mb-1">Username</label>
+                                        {{ form.username }}
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="col-md-10 offset-md-1">
+                                    <div class="form-group">
+                                        <label class="small mb-1">Password</label>
+                                        {{ form.password }}
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="col-md-10 offset-md-1">
+                                    <div class="form-group">
+                                        <!-- Add a Remember me functionality -->
+                                        {{ form.remember_me }}
+                                        <label> Remember me</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="col-md-10 offset-md-1">
+                                    <div class="form-group mt-0 mb-1">
+                                        <button name="login" class="col-md-12 btn btn-primary" id="login">Sign in</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <br>
+
+                            {% comment %} <p class="text-center"><strong>OR</strong></p>
+
+                            <a href="{% url 'social:begin' 'github' %}" class="btn btn-link btn-lg active btn-block text-primary">Sign in with GitHub</a>
+
+                            <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-link btn-lg active btn-block text-primary">Sign in with Google</a> {% endcomment %}
+                        </form>
+                    </div>
+
+                    <div class="card-footer text-center">
+                        <div class="small">
+                            <a href="{% url 'register' %}">Don't have an account yet? Go to signup</a><br>
+                            <a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock content %}
