--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
 <body>
   <nav class="navbar navbar-expand-md bg-body-tertiary nav-background1">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="static/images/logo.png" class="logo_img">
-        <img src="static/images/logo_text.png" class="logo_text_img">
+      <a class="navbar-brand" href="/">
+        <img src="{% static "images/logo.png" %}" class="logo_img">
+        <img src="{% static "images/logo_text.png" %}" class="logo_text_img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,16 +24,13 @@
       <div class="collapse navbar-collapse alignment1" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#">Categories</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Post</a>
@@ -44,7 +41,7 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2 mx-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success1 bg-light-subtle" type="submit">Search</button>
+          <button class="btn btn-outline-success1 bg-light-subtle btn_search" type="submit"><div class = "text" >Search</div></button>
         </form>
       </div>
     </div>
@@ -58,9 +55,9 @@
           <div class="d-flex justify-content-center">
           <div id="google_translate_element" class="mx-3"></div>
           <div class="d-flex mx-3">
-          <div><a href="https://www.instagram.com/raag.viraag?utm_source=qr"><img src="static/images/instagram.png" class="social_img mx-2"></a></div>
-          <div><a href="https://www.facebook.com/share/AfdjVAjV7FEfDqUV/?mibextid=WC7FNe"><img src="static/images/facebook.png" class="social_img mx-2"></a></div>
-          <div><a href="https://youtube.com/@raagviraag?si=fk_G6czNVwdldSGs"><img src="static/images/youtube.png" class="social_img mx-2"></a></div></div>
+          <div><a href="https://www.instagram.com/raag.viraag?utm_source=qr"><img src="{% static "images/instagram.png" %}" class="social_img mx-2"></a></div>
+          <div><a href="https://www.facebook.com/share/AfdjVAjV7FEfDqUV/?mibextid=WC7FNe"><img src="{% static "images/facebook.png" %}" class="social_img mx-2"></a></div>
+          <div><a href="https://youtube.com/@raagviraag?si=fk_G6czNVwdldSGs"><img src="{% static "images/youtube.png" %}" class="social_img mx-2"></a></div></div>
           </div>
             <p>&copy; 2023 Raag Viraag. All Rights Reserved.</p>
           </div>
