--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
     <!-- Hero Section -->
+    <div class="container_body">
     <div class="header">
         <div class="container">
             <h1>Welcome to Raag Viraag</h1>
@@ -57,4 +58,5 @@
 
         </div>
     </div>
+  </div>
     {% endblock content %}
