--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,8 @@
-{% block title %} Login Page {% endblock title %}
+{% extends "base.html" %}
+{% comment %} {% block title %} Login Page {% endblock title %} {% endcomment %}
 {% load static %}
 {% block css %}
-    <link rel="stylesheet" href="{% static "css/home.css" %}">
+    <link rel="stylesheet" href="{% static "static/css/home.css" %}">
 {% endblock css %}
 {% block content %}
 <div class="form-content my-3 p-3">
