Updates in CSS in Authentication Pages

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,7 @@
-{% block title %} Register Page {% endblock title%}
+{% extends "base.html" %}
+{% load static %}
+
+<link rel="stylesheet" href="{% static "static/css/home.css" %}">
 {% block content %}
     <div class="form-content my-3 p-3">
 		<div class="container">
