--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse alignment1" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Categories</a>
+            <a class="nav-link" href="/categories">Categories</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
