--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -1,4 +1,7 @@
-{% block content %}
+{% extends "base.html" %}
+{% load static %}
+
+<link rel="stylesheet" href="{% static "static/css/home.css" %}">{% block content %}
     <div class="container my-3 p-3">
         <div class="row justify-content-center">
             <div class="col-lg-5">
