--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{% static "css/categories.css" %}">
 
 {% block content %}
-
+<div class="main_aboutus">
 <!-- Hero Section -->
 <div class="header">
     <div class="container">
@@ -41,6 +41,9 @@
         </div>
     </div>
 </div>
+</div>
+
+<div class="main_contactus">
 <div class="header">
   <div class="container">
       <h1>Contact Us</h1>
@@ -65,5 +68,5 @@
     <!-- <a href="#" class="read-more-btn">Read More</a> -->
 </div>
 </div>
-
+</div>
 {% endblock content %}
