--- a/templates/categories.html
+++ b/templates/categories.html
@@ -7,7 +7,7 @@
 <!-- Hero Section -->
 <div class="header">
     <div class="container">
-        <h1 class="d-flex ml-5">Categories</h1>
+        <h1 class="d-flex">Categories</h1>
     </div>
 </div>
 
@@ -15,18 +15,18 @@
 <div class="blog-posts">
     <div class="container">
         <!-- Blog Post Cards Go Here -->
-        <div class="blog-post-card w-33 d-flex justify-content-around w-75">
-            <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
-          <div>
-            <h2>Blog Post Title</h2>
-            <p class="post-meta">By Author | Date</p>
-            <p class="post-excerpt">A brief excerpt from the blog post...</p>
-            <a href="#" class="read-more-btn">Read More</a>
+          <div class="blog-post-card w-33 d-flex justify-content-around w-75">
+              <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
+              <div>
+                <h2>Blog Post Title</h2>
+                <p class="post-meta">By Author | Date</p>
+                <p class="post-excerpt">A brief excerpt from the blog post...</p>
+                <a href="#" class="read-more-btn">Read More</a>
+              </div>
           </div>
-        </div>
-      
-<div class="blog-posts">
-    <div class="container">
+    
+{% comment %} <div class="blog-posts"> {% endcomment %}
+    {% comment %} <div class="container"> {% endcomment %}
         <!-- Blog Post Cards Go Here -->
         <div class="blog-post-card w-33 d-flex justify-content-around w-75">
             <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
