--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,13 @@
 <link rel="stylesheet" href="{% static "static/css/home.css" %}">
 
 {% block content %}
+<div class="main_login">
 <div class="form-content my-3 p-3">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                    <div class="card-header justify-content-center">
+                    <div class=" justify-content-center">
                         <h3 class="font-weight-light my-1 text-center">Sign In</h3>
                     </div>
 
@@ -59,8 +60,8 @@
 
                             <div class="form-row">
                                 <div class="col-md-10 offset-md-1">
-                                    <div class="form-group mt-0 mb-1">
-                                        <button name="login" class="col-md-12 btn btn-primary" id="login">Sign in</button>
+                                    <div class="btn_style">
+                                        <button name="login" class="col-md-12 btn login_style" id="login">Sign in</button>
                                     </div>
                                 </div>
                             </div>
@@ -75,7 +76,7 @@
                         </form>
                     </div>
 
-                    <div class="card-footer text-center">
+                    <div class=" text-center">
                         <div class="small">
                             <a href="{% url 'register' %}">Don't have an account yet? Go to signup</a><br>
                             <a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
@@ -85,5 +86,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock content %}
