--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -8,7 +8,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-5">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                        <div class="card-header justify-content-center">
+                        <div class="justify-content-center">
                         	<div id="error_div"></div>
                           <h3 class="font-weight-light my-4 text-center">Forgot Password?</h3>
                         </div>
@@ -39,15 +39,15 @@
                             </div>
                                 <div class="form-row">
                                   <div class="col-md-10 offset-md-1">
-                                    <div class="form-group mt-0 mb-1">
-                                        <button type="submit" class="col-md-12 btn btn-primary">Submit
+                                    <div class="form-group mt-0 mb-1 btn_style">
+                                        <button type="submit" class="col-md-12 btn login_style">Submit
                                         </button>
                                     </div>
                                  </div>
                                </div>
                             </form>
                         </div>
-                        <div class="card-footer text-center">
+                        <div class="text-center">
                             <div class="small">
                                 <a href="{% url 'register' %}">Create A New Account</a><br><br>
                                 <a href="{% url 'login' %}">Back To Login</a><br>
