--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-5">
-                        <div class="card-header justify-content-center">
+                        <div class=" justify-content-center">
                         	<h3 class="font-weight-light my-4 text-center">Create Account</h3>
                         </div>
                         <div class="card-body">
@@ -70,12 +70,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group mt-4 mb-0">
-                                    <button type="submit" class="col-md-12 btn btn-primary">Sign Up</button><br><br>
+                                <div class="form-group mt-4 mb-0 btn_style">
+                                    <button type="submit" class="col-md-12 btn login_style">Sign Up</button><br>
                                 </div>
                             </form>
                         </div>
-                        <div class="card-footer text-center">
+                        <div class="text-center">
                             <div class="small">
                                 <a href="{% url 'login' %}">Have an account? Go to Sign in</a>
                             </div>
