--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{% static "css/categories.css" %}">
 
 {% block content %}
-<div class="main_aboutus">
+<div class="main_background">
 <!-- Hero Section -->
 <div class="header">
     <div class="container">
@@ -43,7 +43,7 @@
 </div>
 </div>
 
-<div class="main_contactus">
+<div class="main_background">
 <div class="header">
   <div class="container">
       <h1>Contact Us</h1>
