--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" href="{% static "static/css/home.css" %}">
 
 {% block content %}
-<div class="main_login">
-<div class="form-content my-3 p-3">
+<div class="main_background">
+<div class="form-content p-3">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5">
-                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3 small_container">
                     <div class=" justify-content-center">
                         <h3 class="font-weight-light my-1 text-center">Sign In</h3>
                     </div>
