--- a/templates/register.html
+++ b/templates/register.html
@@ -3,11 +3,11 @@
 
 <link rel="stylesheet" href="{% static "static/css/home.css" %}">
 {% block content %}
-    <div class="form-content my-3 p-3">
+    <div class="form-content main_background">
 		<div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
-                    <div class="card shadow-lg border-0 rounded-lg mt-0 mb-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-0 mb-5 small_container">
                         <div class=" justify-content-center">
                         	<h3 class="font-weight-light my-4 text-center">Create Account</h3>
                         </div>
