--- a/templates/about.html
+++ b/templates/about.html
@@ -52,7 +52,7 @@
 </div>
 <div class="w-100 home_content">
 <!--block 1  -->
-<div class="blog-post-card d-flex flex-column justify-content-center align-items-center w-25">
+<div class="blog-post-card d-flex flex-column justify-content-center align-items-center">
     <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
     <h2>Nikhil Chaturvedi</h2>
     <p class="post-meta">Contact No. : +91 99765 18678</p>
@@ -60,7 +60,7 @@
     <!-- <a href="#" class="read-more-btn">Read More</a> -->
 </div>
 <!--block 2  -->
-<div class="blog-post-card d-flex flex-column justify-content-center align-items-center w-25">
+<div class="blog-post-card d-flex flex-column justify-content-center align-items-center">
     <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
     <h2>Sameer Vyaas</h2>
     <p class="post-meta">Contact No. : +91 90016 69666</p>
