--- a/templates/login.html
+++ b/templates/login.html
@@ -66,6 +66,14 @@
                                 </div>
                             </div>
 
+                            {% comment %} <div class="form-row">
+                                <div class="col-md-10 offset-md-1">
+                                    <div class="btn_style">
+                                        <button name="login google" class="col-md-12 btn login_style">  <a href="{% url 'google_login' %}">Sign in with Google</a></button>
+                                    </div>
+                                </div>
+                            </div> {% endcomment %}
+
                             <br>
 
                             {% comment %} <p class="text-center"><strong>OR</strong></p>
