--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 <div class="main_background">
 <div class="form-content p-3">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center login_height p-5">
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3 small_container">
                     <div class=" justify-content-center">
