--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact</a>
+            <a class="nav-link" href="/about#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Post</a>
