--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="form-content main_background">
 		<div class="container">
-            <div class="row justify-content-center signup_height p-3">
+            <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-5 small_container">
                         <div class=" justify-content-center">
