--- a/templates/about.html
+++ b/templates/about.html
@@ -43,7 +43,7 @@
 <div class="main_background">
 <div class="header">
 <div class="container">
-    <h1>Contact Us</h1>
+    <h1 id="contact">Contact Us</h1>
     <!-- <p>Harmonizing Cultures : Exploring Raag Viraag!</p> -->
 </div>
 </div>
