--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact</a>
+            <a class="nav-link" href="/about#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
