--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -1,31 +1,45 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="d-flex justify-content-evenly bg-primary w-100 p-5">
-<div class="blog_width container bg-warning">
-    <header class="pb-5 d-flex justify-content-center">
-        <h2>helloo..</h2>
-    </header>
-    {% comment %} <div class="container"> {% endcomment %}
-                {% comment %} {% if latestpost_list %} {% endcomment %}
-                                <div class="card mb-4 w-100">
-                                    <img class="card-img-top" src="{{star_post.img.url}}" width="500px" height="500px" alt="..." />
-                                </div>
-                {% comment %} {% else %} {% endcomment %}
-                    {% comment %} <h2 class="text-center">Coming Soon...</h2> {% endcomment %}
-                {% comment %} {% endif %} {% endcomment %}
-            {% comment %} </div> {% endcomment %}
-    </div>
+<div class="d-flex justify-content-evenly  w-100 p-5">
+<div class="blog_width container p-5 w-50">
+                <header class="d-flex justify-content-center my-2">
+                    <h1>{{blog.title}}</h1>
+                </header>
+                <div class="item-1 d-flex justify-content-center">
+                    <div  class="card d-flex justify-content-center">
+                        <div class="thumb w-100 p-4 d-flex justify-content-center" style="">
+                            <img src="{{blog.img.url}}" class="blog_image">
+                        </div>
+                            <article>
+                                <p>{{blog.body | safe}}</p>
+                            </article>
+                        </div>
+                    </div>
+                </div>
     <div class="w-25">
-        <div class="card mb-4 w-100">
-            <img class="card-img-top" src="{{star_post.img.url}}" width="500px" height="500px" alt="..." />
+        <div class="blog-post-card ad_block1">
+            <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
+            <h2>Another Blog Post Title</h2>
+            <p class="post-meta">By Author | Date</p>
+            <p class="post-excerpt">A brief excerpt from another blog post...</p>
+            <a href="#" class="read-more-btn">Read More</a>
         </div>
-        <div class="card mb-4 w-100">
-            <img class="card-img-top" src="{{star_post.img.url}}" width="500px" height="500px" alt="..." />
+        <div class="blog-post-card ad_block1">
+            <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
+            <h2>Another Blog Post Title</h2>
+            <p class="post-meta">By Author | Date</p>
+            <p class="post-excerpt">A brief excerpt from another blog post...</p>
+            <a href="#" class="read-more-btn">Read More</a>
         </div>
-        <div class="card mb-4 w-100">
-            <img class="card-img-top" src="{{star_post.img.url}}" width="500px" height="500px" alt="..." />
+        <div class="blog-post-card ad_block1">
+            <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
+            <h2>Another Blog Post Title</h2>
+            <p class="post-meta">By Author | Date</p>
+            <p class="post-excerpt">A brief excerpt from another blog post...</p>
+            <a href="#" class="read-more-btn">Read More</a>
         </div>
+        
 </div>
 </div>
     {% endblock content %}
