--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" href="{% static "static/css/home.css" %}">
 {% block content %}
-    <div class="form-content main_background">
+    <div class="form-content main_background login_height">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
