--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 <div class="main_background">
-<div class="form-content p-3">
+<div class="form-content login_height p-3">
     <div class="container">
-        <div class="row justify-content-center login_height p-5">
+        <div class="row justify-content-center  p-5">
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3 small_container">
                     <div class=" justify-content-center">
