--- a/templates/categories.html
+++ b/templates/categories.html
@@ -10,23 +10,37 @@
         <h1 class="d-flex">Categories</h1>
     </div>
 </div>
-
 <!-- Blog Posts Section -->
 <div class="blog-posts">
     <div class="container">
         <!-- Blog Post Cards Go Here -->
+        {% if slug1 in request.path %}
         {% for post in category_posts %}
-          <div class="blog-post-card w-33 d-flex justify-content-around w-75">
-              <img src="{{post.img.url}}" alt="{{post.}}" class="blog_img">
-              <div>
+        <div class="blog-post-card w-33 d-flex justify-content-around w-75">
+            <img src="{{post.img.url}}" alt="{{post.image_alt}}" class="blog_img">
+            <div>
                 <h2>{{post.title}}</h2>
                 <p class="post-meta">{{post.author.first_name}} {{post.author.last_name}} | {{post.post_date}}</p>
                 <p class="post-excerpt">{{post.meta_description}}</p>
                 <a href="{% url 'blog-detail' post.slug %}" class="read-more-btn">Read More</a>
-              </div>
-          </div>
+            </div>
+        </div>
         {% endfor %}
+        {% else %}
     
+        {% for post in category_posts %}
+        <div class="blog-post-card w-33 d-flex justify-content-around w-75">
+            <img src="{{post.category.image.url}}" alt="{{post.image_alt}}" class="blog_img">
+            <div>
+                <h2>{{post.category.categoryname}}</h2> 
+                {% comment %} <p class="post-meta">{{post.author.first_name}} {{post.author.last_name}} | {{post.post_date}}</p> {% endcomment %}
+                <p class="post-excerpt">{{post.meta_description}}</p>
+                <a href="{% url 'category-view' post.slug %}" class="read-more-btn">Read More</a>
+            </div>
+        </div>
+        {% endfor %}
+        {% endif %}
+        
 {% comment %} <div class="blog-posts"> {% endcomment %}
     {% comment %} <div class="container"> {% endcomment %}
         <!-- Blog Post Cards Go Here -->
