--- a/templates/base.html
+++ b/templates/base.html
@@ -52,11 +52,12 @@
     <!-- Footer -->
     <div class="footer">
         <div class="container">
-          <div class="d-flex justify-content-center">
-            <div class="d-flex">
-              <img src="{% static 'images/language.png' %}" alt="language" class="social_img">
-          <div id="google_translate_element" class="mr-3 tag_margin"></div></div>
-          <div class="d-flex mx-3">
+          <div class="d-flex justify-content-center footer_social">
+           <div class="d-flex justify-content-center">
+            <img src="{% static 'images/language.png' %}" alt="language" class="social_img">
+            <div id="google_translate_element" class="mr-3 tag_margin"></div>
+           </div>
+          <div class="d-flex mx-3 justify-content-center">
           <div><a href="https://www.instagram.com/raag.viraag?utm_source=qr"><img src="{% static "images/instagram.png" %}" class="social_img mx-2"></a></div>
           <div><a href="https://www.facebook.com/share/AfdjVAjV7FEfDqUV/?mibextid=WC7FNe"><img src="{% static "images/facebook.png" %}" class="social_img mx-2"></a></div>
           <div><a href="https://youtube.com/@raagviraag?si=fk_G6czNVwdldSGs"><img src="{% static "images/youtube.png" %}" class="social_img mx-2"></a></div></div>
