--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="d-flex justify-content-evenly  w-100 p-5">
-<div class="blog_width container p-5 w-50">
+<div class="d-flex justify-content-evenly  w-100 p-5 blog_main_container">
+<div class="blog_block_1 container ">
                 <header class="d-flex justify-content-center my-2">
                     <h1>{{blog.title}}</h1>
                 </header>
                 <div class="item-1 d-flex justify-content-center">
                     <div  class="card d-flex justify-content-center">
                         <div class="thumb w-100 p-4 d-flex justify-content-center" style="">
-                            <img src="{{blog.img.url}}" class="blog_image">
+                            <img src="{{blog.img.url}}" class="blog_img">
                         </div>
                             <article>
                                 <p>{{blog.body | safe}}</p>
@@ -36,7 +36,7 @@
                         <p>Login to leave a comment.</p>
                     {% endif %}
                 </div> {% endcomment %}
-    <div class="w-25">
+    <div class="blog_block_2 container">
         <div class="blog-post-card ad_block1">
             <!-- <img src="https://via.placeholder.com/300" alt="Blog Post Image"> -->
             <h2>Another Blog Post Title</h2>
