--- a/templates/about.html
+++ b/templates/about.html
@@ -16,8 +16,8 @@
       <!-- Blog Post Cards Go Here -->
     <div class="w-60">
       <!--block 1  -->
-      <div class="blog-post-card home_content">
-          <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
+      <div class="blog-post-card about_us_content">
+          <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="about_us_img">
         <div>
           <h2>Nikhil Chaturvedi</h2>
           <p class="post-meta">By Author | Date</p>
@@ -26,8 +26,8 @@
         </div>
     </div>
       <!--block 2  -->
-      <div class="blog-post-card home_content">
-          <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
+      <div class="blog-post-card about_us_content">
+          <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="about_us_img">
         <div>
           <h2>Sameer Vyaas</h2>
           <p class="post-meta">By Author | Date</p>
