--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,7 @@
                 <p class="post-excerpt">A brief excerpt from another blog post...</p>
                 <a href="#" class="read-more-btn">Read More</a>
             </div>
-            <!-- Repeat the above structure for additional blog posts -->
-<div class="w-30">
+<div class="blog-post-card">
   <div class="blog-post-card ad_block1">
       <!-- Display Category List -->
       <h2>Categories</h2>
