--- a/static/css/style.css
+++ b/static/css/style.css
@@ -355,3 +355,16 @@ body {
 .home_img{
   width: 30%;
 }
+
+.category_img{
+  width: 30%;
+}
+
+.about_us_content{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.about_us_img{
+  width: 30%;
+}
