Sidebar Content Added

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,69 +1,71 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block content %}
-<div class="main_background">
-<!-- Hero Section -->
-<div class="header">
-  <div class="container">
-      <h1>About Us</h1>
-      <!-- <p>Harmonizing Cultures : Exploring Raag Viraag!</p> -->
-  </div>
-</div>
-
-<!-- Blog Posts Section -->
-<div class="blog-posts">
-  <div class="container d-flex justify-content-around">
-      <!-- Blog Post Cards Go Here -->
-    <div class="w-60">
-      <!--block 1  -->
-      <div class="blog-post-card about_us_content">
-          <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="about_us_img">
-        <div>
-          <h2>Nikhil Chaturvedi</h2>
-          <p class="post-meta">By Author | Date</p>
-          <p class="post-excerpt">A brief excerpt from the blog post...</p>
-          <a href="#" class="read-more-btn">Read More</a>
-        </div>
+  <div class="main_background">
+    <!-- Hero Section -->
+    <div class="header">
+      <div class="container">
+        <h1>About Us</h1>
+        <!-- <p>Harmonizing Cultures: Exploring Raag Viraag!</p> -->
+      </div>
     </div>
-      <!--block 2  -->
-      <div class="blog-post-card about_us_content">
-          <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="about_us_img">
-        <div>
-          <h2>Sameer Vyaas</h2>
-          <p class="post-meta">By Author | Date</p>
-          <p class="post-excerpt">A brief excerpt from the blog post...</p>
-          <a href="#" class="read-more-btn">Read More</a>
+
+    <div class="container">
+      {% if about_content %}
+          <p>{{ about_content.text | safe }}</p>
+      {% else %}
+          <p>No content available</p>
+      {% endif %}
+    </div>
+
+    <div class="blog-posts">
+      <div class="container d-flex justify-content-around">
+        <!-- Blog Post Cards Go Here -->
+        <div class="w-60">
+          {% for admin_info in admin_info_list %}
+            <div class="blog-post-card about_us_content">
+              <div>
+                <img src="{{ admin_info.profile.url }}" alt="Admin Image" class="about_us_img">
+                <h2>{{ admin_info.name }}</h2>
+                <h6>{{ admin_info.phone }}</h6>
+              </div>
+              <div>
+                <p class="post-excerpt">{{ admin_info.desc | safe }}</p>
+              </div>
+            </div>
+          {% endfor %}
         </div>
       </div>
-      </div>
+    </div>
   </div>
-</div>
-</div>
 
-<div class="main_background">
-<div class="header">
-<div class="container">
-    <h1 id="contact">Contact Us</h1>
-    <!-- <p>Harmonizing Cultures : Exploring Raag Viraag!</p> -->
-</div>
-</div>
-<div class="w-100 home_content">
-<!--block 1  -->
-<div class="blog-post-card d-flex flex-column justify-content-center align-items-center">
-    <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
-    <h2>Nikhil Chaturvedi</h2>
-    <p class="post-meta">Contact No. : +91 99765 18678</p>
-    <p class="post-excerpt">Email : admin@raagviraag.com</p>
-    <!-- <a href="#" class="read-more-btn">Read More</a> -->
-</div>
-<!--block 2  -->
-<div class="blog-post-card d-flex flex-column justify-content-center align-items-center">
-    <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
-    <h2>Sameer Vyaas</h2>
-    <p class="post-meta">Contact No. : +91 90016 69666</p>
-    <p class="post-excerpt">Email : sv@raagviraag.com</p>
-    <!-- <a href="#" class="read-more-btn">Read More</a> -->
-</div>
-</div>
-</div>
+  <div class="main_background">
+    <div class="header">
+      <div class="container">
+        <h1 id="contact">Contact Us</h1>
+        <!-- <p>Harmonizing Cultures: Exploring Raag Viraag!</p> -->
+      </div>
+    </div>
+
+    <div class="w-100 home_content">
+      <!-- Block 1 -->
+      <div class="blog-post-card d-flex flex-column justify-content-center align-items-center">
+        <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
+        <h2>Nikhil Chaturvedi</h2>
+        <p class="post-meta">Contact No.: +91 99765 18678</p>
+        <p class="post-excerpt">Email: admin@raagviraag.com</p>
+        <!-- <a href="#" class="read-more-btn">Read More</a> -->
+      </div>
+
+      <!-- Block 2 -->
+      <div class="blog-post-card d-flex flex-column justify-content-center align-items-center">
+        <img src="https://via.placeholder.com/300" alt="Blog Post Image" class="blog_img">
+        <h2>Sameer Vyaas</h2>
+        <p class="post-meta">Contact No.: +91 90016 69666</p>
+        <p class="post-excerpt">Email: sv@raagviraag.com</p>
+        <!-- <a href="#" class="read-more-btn">Read More</a> -->
+      </div>
+    </div>
+  </div>
 {% endblock content %}
