--- a/templates/base.html
+++ b/templates/base.html
@@ -25,24 +25,38 @@
       <div class="collapse navbar-collapse alignment1" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/category">Categories</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/about">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about#contact">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-        </ul>
+          
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCategories" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Categories
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownCategories">
+                {% for category in cat_list %}
+                    <a class="dropdown-item" href="{% url 'category-view' category.slug %}">{{ category.categoryname }}</a>
+                {% endfor %}
+            </div>
+        </li>
         <form class="d-flex" action="{% url 'search' %}" method="get">
           <input class="form-control me-2 mx-2" type="search" name="q" placeholder="Search" aria-label="Search" value="{{ query }}">
           <button class="btn btn-outline-success1 bg-light-subtle btn_search" type="submit">
-              <div class="text">Search</div>
+            <div class="text">Search</div>
           </button>
-      </form>
+        </form>
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+          {% endif %}
+      </ul>
       </div>
     </div>
   </nav>
