--- a/templates/search_list.html
+++ b/templates/search_list.html
@@ -15,10 +15,10 @@
         {% if posts %}
             <div class="row">
                 {% for post in posts %}
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         <div class="blog-post-card home_content mb-4">
                             {% if post.img %}
-                                <img src="{{ post.img.url }}" alt="{{ post.image_alt }}" class="blog_img">
+                                <img src="{{ post.img.url }}" alt="{{ post.image_alt }}" class="search_blog_img">
                             {% endif %}
                             <div>
                                 <h2>{{ post.title }}</h2>
