[UPD] blog detail page changes

--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -43,8 +43,8 @@
     <div class="blog_block_2 container">
         <div class="blog-post-card ad_block_1">
             <div class="sidebar-content">
-                <h2>{{ blog.side_title }}</h2>
-                <p>{{ blog.side_desc | safe }}</p>
+                <h2>{{ blog.sidebar_title }}</h2>
+                <p>{{ blog.sidebar_desc | safe }}</p>
             </div>
         </div>
         {% for post in latestpost_list %}
