--- a/templates/categories.html
+++ b/templates/categories.html
@@ -12,7 +12,7 @@
 </div>
 <!-- Blog Posts Section -->
 <div class="blog-posts">
-    <div class="container">
+    <div class="container container1">
         <!-- Blog Post Cards Go Here -->
         {% if slug1 in request.path %}
         <div class="w-60">
