--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     
     <!-- Blog Posts Section -->
     <div class="blog-posts">
-        <div class="container d-flex justify-content-around my-5">
+        <div class="container container1 d-flex justify-content-around my-5">
             <!-- Blog Post Cards Go Here -->
           <div class="w-60">
             <!--block 1  -->
